# myos

./: '  .gitignore  CMakeLists.txt  Dockerfile  README.md  oss_memo.txt
include/boot/: bootinfo.inc
include/common/: bootparam.h  define.h  string.h  types.h  util.h
include/freebsd/sys/sys/: queue.h
include/kernel/: acpi.h  bootinfo.h  config.h  define.h  font.h  graphics.h  physmem.h  status.h  string.h  timer.h  types.h  util.h  vmem.h
include/kernel/arch/x64/: asm.h  asmfunc.h  asminline.h  constant.h  descriptor.h  gdt.h  interrupt.h  mp.h  pcpu.h  pmem.h  vmem.h
include/kernel/freebsd/: queue.h
include/loader/arch/x64/: vmem.h
include/loader/freebsd/: elf64.h  elf_common.h
src/: CMakeLists.txt
src/boot/: CMakeLists.txt
src/boot/common/: read_sector.asm  util.asm
src/boot/ipl/: CMakeLists.txt  ipl.asm  ipl.ld
src/boot/loader/: CMakeLists.txt  loader.ld  loader16.asm  loader32.asm  loader64.asm  test.c
src/freebsd/lib/libc/: CMakeLists.txt
src/freebsd/lib/libc/string/: bcopy.c  memcmp.c  memcpy.c  memset.c  strlen.c
src/freebsd/stand/libsa/: printf.c
src/kernel/: CMakeLists.txt  acpi.c  asmfunc.asm  font.c  graphics.c  kentry.asm  kernel.ld  kmain.c  physmem.c  test.c  timer.c  util.c
src/kernel/arch/x64/: asmfunc.S  gdt.c  init.c  interrupt.c  interrupt_handler.S  mp.c  pcpu.c  pmem.c  trampoline.S  vmem.c
src/loader/: CMakeLists.txt  elf.c  font.c  loader.c
src/loader/arch/x64/: vmem.c
tools/font/: make_font.py
