set(CMAKE_ASM_NASM_OBJECT_FORMAT elf64)
set(CMAKE_ASM_NASM_LINK_EXECUTABLE "/usr/bin/ld.lld-10 <CMAKE_ASM_NASM_LINK_FLAGS> <LINK_FLAGS> -T ${CMAKE_CURRENT_SOURCE_DIR}/<TARGET>.ld <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")
file(GLOB_RECURSE SRCS_ASM "*.asm")
set_source_files_properties(${SRCS_ASM} PROPERTIES LANGUAGE ASM_NASM)

add_executable(ipl ipl.asm)

#set_target_properties(ipl PROPERTIES
#    SUFFIX ".elf"
#    #LINK_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/ipl.ld
#)
